--- a/Lingüística Computacional Final/Periodo cotejo/Trabajo_cotejo (1).ipynb
+++ b/Lingüística Computacional Final/Periodo cotejo/Trabajo_cotejo (1).ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
        "{'yem': [], 'ema': [], 'em': []}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,18 +182,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "list"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'Y' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [8]\u001b[0m, in \u001b[0;36m<cell line: 5>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m Y \u001b[38;5;129;01min\u001b[39;00m oracion:\n\u001b[1;32m      4\u001b[0m             Yem_oraciones[Y]\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m[oracion]\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28mtype\u001b[39m(Yem_oraciones[\u001b[43mY\u001b[49m])\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Y' is not defined"
+     ]
     }
    ],
    "source": [
@@ -206,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {
     "scrolled": false
    },
@@ -275,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -286,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,14 +350,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['dungu', 'epu', 'rakiduamleiñ', 'kiñe', 'pataka', 'tripantü', 'rupalu', 'mülekefuy', 'fentren', 'dungukelu', 'feychi', 'kewün', 'welu', 'fachiantü', 'müley', 'epu', 'ka', 'allkümen', 'peru', 'ka', 'allkümen', 'bolivia', 'trawülu', 'iñchiñ', 'fillke']\n"
+      "[]\n"
      ]
     }
    ],
@@ -366,14 +367,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1804, 3640, 3644, 3694, 3708, 3747, 4034, 4069, 5409, 6126, 7334, 10744, 10748, 11448, 11840, 13261, 13803, 13815, 13849, 14365, 14370, 14373, 14791, 14801, 15199, 15228, 15359, 15399, 15404, 15456, 15494, 15791, 16249, 16268, 16596, 17472, 21403, 23799, 23909, 23995, 24440, 24732, 24991, 25107, 25854, 26040, 26103, 26109, 26220, 26320, 26516, 26611, 28037, 28567, 29942, 30072]\n"
+      "[]\n"
      ]
     }
    ],
@@ -383,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
@@ -391,65 +392,10 @@
     {
      "data": {
       "text/plain": [
-       "[['feychi', 'mongen', 'tañi', 'palu', 'yem'],\n",
-       " ['fendemekefuy', 'tañi', 'kuse', 'ñuke', 'yem'],\n",
-       " ['yem', 'tañi', 'kuse', 'palu', 'yem'],\n",
-       " ['pikefuy', 'tañi', 'kuse', 'chuchu', 'yem'],\n",
-       " ['weñengekefuy', 'ta', 'füchake', 'che', 'yem'],\n",
-       " ['weñeñmangekefuy', 'tañi', 'füchake', 'che', 'yem'],\n",
-       " ['feypikefuenew', 'tañi', 'kuse', 'chuchu', 'yem'],\n",
-       " ['pifin', 'feymew', 'tami', 'chuchu', 'yem'],\n",
-       " ['pu', 'ñi', 'kuse', 'kuku', 'yem'],\n",
-       " ['entuniengekey', 'pikefuy', 'ñi', 'ñuke', 'yem'],\n",
-       " ['siempre', 'acordaniekefuy', 'tami', 'ñuke', 'yem'],\n",
-       " ['amutuael', 'tañi', 'kuse', 'püllü', 'yem'],\n",
-       " ['yem', 'tañi', 'kuse', 'chuchu', 'yem'],\n",
-       " ['decia', 'pikefuy', 'ñi', 'mama', 'yem'],\n",
-       " ['may', 'pütrülekefuy', 'füchake', 'che', 'yem'],\n",
-       " ['tranakununge', 'piy', 'ñi', 'ñuke', 'yem'],\n",
-       " ['engün', 'taiñ', 'füchake', 'che', 'yem'],\n",
-       " ['pellkelepelayngün', 'taiñ', 'füchake', 'che', 'yem'],\n",
-       " ['pellkeley', 'ta', 'füchake', 'che', 'yem'],\n",
-       " ['ta', 'ñi', 'füchake', 'che', 'yem'],\n",
-       " ['ta', 'ñi', 'füchake', 'laku', 'yem'],\n",
-       " ['laku', 'yem', 'füchake', 'weychafe', 'yem'],\n",
-       " ['amutun', 'tañi', 'kuse', 'chuchu', 'yem'],\n",
-       " ['elelenew', 'tañi', 'kuse', 'chuchu', 'yem'],\n",
-       " ['epeke', 'amutuy', 'tañi', 'ñuke', 'yem'],\n",
-       " ['fey', 'tañi', 'tañi', 'laku', 'yem'],\n",
-       " ['iñche', 'triparumey', 'tañi', 'chuchu', 'yem'],\n",
-       " ['layael', 'tañi', 'kuse', 'chuchu', 'yem'],\n",
-       " ['amutuael', 'tañi', 'kuse', 'chuchu', 'yem'],\n",
-       " ['feychi', 'layalu', 'ñi', 'ñuke', 'yem'],\n",
-       " ['tañi', 'kuse', 'kuse', 'chuchu', 'yem'],\n",
-       " ['ta', 'ñi', 'kuse', 'laku', 'yem'],\n",
-       " ['ta', 'ñi', 'kuse', 'laku', 'yem'],\n",
-       " ['ñuke', 'ka', 'lawentuchefengey', 'agustina', 'yem'],\n",
-       " ['kom', 'kimniekey', 'kusheke', 'che', 'yem'],\n",
-       " ['engu', 'chedküywen', 'anay', 'chedküy', 'yem'],\n",
-       " ['pikefuy', 'ta', 'kuyfike', 'che', 'yem'],\n",
-       " ['iñche', 'ñi', 'fücha', 'laku', 'yem'],\n",
-       " ['ta', 'ngülam', 'füchake', 'che', 'yem'],\n",
-       " ['am', 'taiñ', 'füchake', 'che', 'yem'],\n",
-       " ['iñche', 'ñi', 'kushe', 'kuku', 'yem'],\n",
-       " ['kimfuy', 'ta', 'kuyfike', 'che', 'yem'],\n",
-       " ['küyen', 'mew', 'ñi', 'kuku', 'yem'],\n",
-       " ['am', 'mülelu', 'doy', 'kimche', 'yem'],\n",
-       " ['mapuche', 'kimpalu', 'ñi', 'füchakeche', 'yem'],\n",
-       " ['feychi', 'kimün', 'tañi', 'füchakeche', 'yem'],\n",
-       " ['tati', 'ka', 'tami', 'chuchu', 'yem'],\n",
-       " ['ka', 'tañi', 'ruf', 'chuchu', 'yem'],\n",
-       " ['femngechi', 'ülkantukefuy', 'tañi', 'laku', 'yem'],\n",
-       " ['dewmangekey', 'ta', 'uyew', 'kuyfi', 'yem'],\n",
-       " ['iñche', 'iñche', 'tañi', 'laku', 'yem'],\n",
-       " ['ülkantun', 'ülkantukelafuy', 'tañi', 'füchakeche', 'yem'],\n",
-       " ['mapu', 'pikey', 'tañi', 'füchakeche', 'yem'],\n",
-       " ['ta', 'ti', 'kuse', 'chuchu', 'yem'],\n",
-       " ['iñchiñ', 'taiñ', 'füchake', 'che', 'yem'],\n",
-       " ['feyngey', 'tañi', 'füchake', 'che', 'yem']]"
+       "[]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
